<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">NAK Buch</string>
    <string name="titleGesangbuch" translatable="false">Gesangbuch</string>
    <string name="titleChorbuch" translatable="false">Chorbuch</string>
    <string name="titleJugendliederbuch" translatable="false">Jugendliederbuch</string>
    <string name="titleJBErgaenzungsheft" translatable="false">JB-Ergänzungsheft</string>
    <string name="email" translatable="false">apps@leonard-lemke.com</string>
    <string name="myWebsite" translatable="false">https://www.leonard-lemke.com</string>
    <string name="privacyWebsite" translatable="false">https://www.leonard-lemke.com/nakbuch-privacy-policy</string>
    <string name="playStoreAppLink" translatable="false">market://details?id=</string>
    <string name="playStoreLink" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="oneUiLibaryGithub" translatable="false">OneUI-Project Github</string>
    <string name="oneUIGithubLink" translatable="false">https://github.com/OneUIProject</string>
    <string name="rickRollTrollLink" translatable="false">https://www.leonard-lemke.com/rr</string>
    <string name="bischoffGesangbuchPackageName" translatable="false">de.bischoff.nakgesangbuch</string>
    <string name="bischoffChorbuchPackageName" translatable="false">de.bischoff.chorbuch</string>
    <string name="openOfficialApp">Offizielle App öffnen</string>
    <string name="aboutPageOptionalText">Die inoffizielle Liederbuch-App der NAK.</string>
    <string name="aboutApp">Über NAK Buch</string>
    <string name="help">Hilfe</string>
    <string name="number">Nummer</string>
    <string name="list">Liste</string>
    <string name="favourites">Favoriten</string>
    <string name="numerical">Numerisch</string>
    <string name="alphabetical">Alphabetisch</string>
    <string name="rubric">Rubrik</string>
    <string name="removeFromFav">Aus Favoriten löschen</string>
    <string name="addToFav">Zu Favoriten hinzufügen</string>
    <string name="themeColor">Design Farbe</string>
    <string name="themeColorSummary">Ändern der Design Farbe</string>
    <string name="confirmExit">Verlassen bestätigen</string>
    <string name="pressAgainToExit">Zurück-Taste erneut drücken um zu Beenden.</string>
    <string name="dontShowAgain">Nicht erneut zeigen</string>
    <string name="moreInformation">Mehr Informationen</string>
    <string name="savedNote">Notiz Gespeichert</string>
    <string name="openInPlaystore">In Play Store öffnen</string>
    <string name="toPlaystore">Zum Play Store</string>
    <string name="website">Webseite</string>
    <string name="notes">Notizen</string>
    <string name="insertNote">Hier Notizen eintippen</string>
    <string name="sungOn">Gesungen am</string>
    <string name="systemDefault">Systemeinstellung</string>
    <string name="muteAllAudioStreams">Alle Audio-Streams stummschalten</string>
    <string name="dnd">Bitte-Nicht-Stören</string>
    <string name="dndDescription">Bitte-Nicht-Stören Modus aktivieren/deaktivieren</string>
    <string name="dndActivated">Bitte-Nicht-Stören Modus wurde aktiviert</string>
    <string name="dndDeactivated">Bitte-Nicht-Stören Modus wurde deaktiviert</string>
    <string name="back">Zurück</string>
    <string name="next">Weiter</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="or">oder</string>
    <string name="send">Senden</string>
    <string name="copy">Kopieren</string>
    <string name="delete">Löschen</string>
    <string name="copied">In Zwischenablage kopiert</string>
    <string name="mute">Stummschalten</string>
    <string name="supportMe">Unterstütz mich</string>
    <string name="checkUpdate">Auf Update überprüfen…</string>
    <string name="contactMe">Kontaktier mich (Email)</string>
    <string name="aboutMe">Über mich</string>
    <string name="tiktokTroll" translatable="false">TikTok</string>
    <string name="history">Verlauf</string>
    <string name="historySummary">Verlauf ansehen/aktivieren/deaktivieren</string>
    <string name="writeEmail">Email schreiben</string>
    <string name="moveNumpad">Tastenfeld verschieben</string>
    <string name="openInTextView">In Lied-Ansicht öffnen</string>
    <string name="addDate">Datum hinzufügen</string>
    <string name="reset">Reset</string>
    <string name="restart">Neustart</string>
    <string name="taskFailed">Hoppla, da ist etwas schiefgelaufen…</string>
    <string name="notFound">Nicht gefunden</string>
    <string name="hiddenMenu">Verstecktes Menu</string>
    <string name="color">Farbe</string>
    <string name="design">Design</string>
    <string name="hint">Hinweis</string>
    <string name="appHintShort">Urheberrechtlich geschützte Inhalte</string>
    <string name="appHint">Hinweis zu urheberrechtlich geschützten Inhalten:</string>
    <string name="appHintTextShort">"Diese App steht in keiner Verbindung zur NAK oder der Verlag Friedrich Bischoff GmbH und beinhaltet deshalb nur die vom Urheberrecht freien Texte. Mehr Informationen dazu findest du unter dem Menu-Punkt \"Hilfe\"."</string>
    <string name="appHintText">"Diese App steht in keiner Verbindung zur NAK oder der Verlag Friedrich Bischoff GmbH und beinhaltet lediglich die urheberrechtsfreien Texte aus dem folgenden Büchern:\n\n- Gesangbuch (320 von 438 Liedern)\n- Chorbuch (206 von 462 Liedern)\n- Jugendliederbuch (41 von 102 Liedern)\n- Ergänzungsheft zum Jugendliederbuch (3 von 20 Liedern)\n\nBei den restlichen Liedern liegen die Rechte noch bei den Urhebern, weshalb diese nicht oder nur teilweise angezeigt werden können. Die Informationen zum Urheberrecht wurden mit großer Sorgfalt geprüft, wenn mir hierbei unwissend Fehler unterlaufen sind, bitte ich freundlichst um einen Hinweis, dem ich unverzüglich nachgehen werde.\n\nDie Verwaltung der Rechte obliegt u.a. der Verlag Friedrich Bischoff GmbH, welchee selbst eine (kostenpflichtige) App für das Gesangbuch und eine (kostenpflichtige) App für das Chorbuch herausgegeben hat.\n    "</string>
    <string name="appHintTextBischoff">"Zu den offiziellen Apps der Verlag Friedrich Bischoff GmbH: "</string>
    <string name="whyNoFullText">Warum wird nicht der vollständige Text angezeigt?</string>
    <string name="jokeButtonText">Jetzt Premium-Abo abschließen, um urheberrechtlich geschützte Inhalte freizuschalten!</string>
    <string name="jokeTitle">Kleiner Witz am Rande…</string>
    <string name="jokeMessage">Es gibt kein Premium Abo in dieser App… Bei diesem Lied liegen die Rechte noch bei dem Urheber/den Urhebern.\nDie Verwaltung der Rechte obliegt u.a. der Verlag Friedrich Bischoff GmbH.\nDeshalb können urheberrechtlich geschützte Inhalte in dieser App nicht angezeigt werden… \n\nKnopf ausblenden:</string>
    <string name="easterEggs">Easter Eggs</string>
    <string name="easterEggsText" tools:ignore="Typos">"In dieser App gibt es ein paar Easter Eggs (versteckte Besonderheiten).\nKeine Sorge, die Easter Eggs behindern in keiner Weise die Nutzung der App, sondern sind nur dazu da, dir ein Lächeln ins Gesicht zu zaubern.\nFalls du keinen Spaß verstehst oder nicht weißt was du tust, dann klicke bitte auf Deaktivieren.\nDu kannst die Easter Eggs auch später in den Einstellungen aktivieren oder deaktivieren. Dort findest du außerdem ein Scoreboard, welches deinen Entdeckungsfortschritt anzeigt.\n    "</string>
    <string name="easterEggsHelp">"In dieser App gibt es ein paar Easter Eggs (versteckte Besonderheiten).\nKeine Sorge, die Easter Eggs behindern in keiner Weise die Nutzung der App, sondern sind nur dazu da, dir ein Lächeln ins Gesicht zu zaubern.\n    "</string>
    <string name="alreadyDiscoveredEasterEggs">Bereits entdeckte Easter Eggs</string>
    <string name="easterEggDiscovered">Yeah! Easter Egg entdeckt:&#160;</string>
    <string name="discoveredEasterEggs">Bereits entdeckte Easter Eggs:</string>
    <string name="tips">Tipps</string>
    <string name="showTips">Tipps anzeigen</string>
    <string name="confirmTips">Komm schon… Möchtest du wirklich die Tipps für die Easter Eggs ansehen? Wenn du den Titel "Master of Easter Eggs" mit stolz tragen möchtest, dann klick auf Abbrechen!</string>
    <string name="easterEggTips">Shame, Shame, Shame… \nNa gut: \n- 2 Easter Eggs befinden sich direkt auf dieser Seite… viel Möglichkeiten gibts ja nicht…\n- 3 Easter Eggs können bei der Eingabe von Nummern entdeckt werden\n- 1 Easter Egg wird durch einen bestimmten Notiz-Eintrag entdeckt\n- 1 Easter Egg wird durch eine bestimmte Eingabe bei der Suche entdeckt\n- 1 Easter Egg findest du auf der \"Über mich\"-Seite\n- 1 Easter Egg kann bei einem urheberrechtlich geschütztem Lied entdeckt werden\n- 1 Easter Egg kann in der Textansicht über den "Offizielle App Öffnen"-Button entdeckt werden\n</string>
    <string name="easterEggTipsShame">Ich schäme mich</string>
    <string name="easterEggAlreadyDiscovered">Easter Egg bereits entdeckt… &#128514;</string>
    <string name="easterEggEntry666">Lied Nummer 666 eingeben</string>
    <string name="easterEggEntry999">Lied Nummer 999 eingeben</string>
    <string name="easterEggEntry0">Lied Nummer 0 eingeben</string>
    <string name="easterEggEntryPremium">Auf Premium kaufen-Button klicken</string>
    <string name="easterEggEntryNote">Easter Egg in Notiz schreiben</string>
    <string name="easterEggEntrySearch">Suche nach Easter Egg</string>
    <string name="easterEggEntryTikTok">\"TikTok-Seite\" entdeckt</string>
    <string name="easterEggEntryComment">Easter-Egg-Kommentar mehrfach angeklickt</string>
    <string name="easterEggEntryHelp">Lang auf den Hilfe-Button klicken</string>
    <string name="easterEggWhichOfficialApp">Welche offizielle App?</string>
    <string-array name="easterEggComments">
        <item>Noch keins gefunden? Dann los! &#128118;</item>
        <item>Sei ehrlich, das war durch Zufall gefunden… &#129300;</item>
        <item>Nicht schlecht, das ist doch schonmal ein Anfang… &#128527;</item>
        <item>Weiter so, nicht aufgeben! &#128170;</item>
        <item>So langsam füllt sich die Liste mit entdeckten Easter Eggs! &#128269;</item>
        <item>Halbzeit! &#127881;</item>
        <item>Nice! Schon über die Hälfte der Easter Eggs gefunden! &#128048;</item>
        <item>Und weiter geht die Suche! &#128373;</item>
        <item>Schon ne ganze Menge, stark! &#129299;</item>
        <item>Nur noch 1 fehlt! Komm schon! &#128293;</item>
        <item>&#127942; Master of Easter Eggs! &#127942;</item>
    </string-array>
    <string name="notYetImplemented">Noch nicht implementiert &#129394;</string>
    <string name="buyMeACoffee">Spendier mir einen Kaffee</string>
    <string name="watchAdHeader">Broke? Kein problem</string>
    <string name="watchAd">Freiwillig eine Werbung ansehen</string>
    <string name="supportMeText">Falls du mich in irgendeiner Weise unterstützen möchtest, dann sende mir gerne eine Email</string>
    <string name="rateApp">App im Play-Store Bewerten</string>
    <string name="writeReview">Bewertung schreiben</string>
    <string name="reviewComment">Um ein optimales Nutzererlebnis zu gewährleisten, verwaltet Google Play wann und wie oft einem Nutzer der integrierte Bewertungsdialog angezeigt werden kann. Deshalb kann es vorkommen, dass diese Schaltfläche in manchen Fällen keine Aktion durchführt.\nAlternativ kann die Bewertung dann im Play Store geschrieben werden.</string>
    <string name="share">Teilen</string>
    <string name="shareApp">App Teilen</string>
    <string name="galleryTip">Foto-Gallerie öffnen</string>
    <string name="increaseTextsize">Text vergrößern</string>
    <string name="decreaseTextsize">Text verkleinern</string>
    <string name="shortcut_disabled_msg">Shortcut deaktiviert</string>
    <string name="contact">Kontakt</string>
    <string name="search">Suche</string>
</resources>