<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_oui_search_24"
            android:showAsAction="always"
            android:title="@string/search"
            tools:ignore="AlwaysShowAction" />

        <item
            android:id="@+id/mute"
            android:showAsAction="ifRoom"
            android:title="@string/mute" />

        <item
            android:id="@+id/dnd"
            android:showAsAction="ifRoom"
            android:title="@string/dnd" />

        <item
            android:id="@+id/openOfficialApp"
            android:showAsAction="ifRoom"
            android:title="@string/openOfficialApp" />
</menu>