<?xml version="1.0" encoding="utf-8"?>
<de.dlyt.yanndroid.oneui.layout.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:subtitle="@string/app_name"
    app:title="@string/help">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_location="main_content">

        <de.dlyt.yanndroid.oneui.widget.NestedScrollView
            android:id="@+id/nestedScrollViewHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHelpText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appHintText"
                    android:textSize="17sp" />


                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_marginTop="15dp"
                    android:text="@string/appHintTextBischoff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/openPlaystoreBischoffGesangbuch"
                        style="@style/ButtonStyle.Transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/number_button_height"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:text="@string/titleGesangbuch"
                        app:icon="@drawable/ic_oui4_store" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/openPlaystoreBischoffChorbuch"
                        style="@style/ButtonStyle.Transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/number_button_height"
                        android:layout_marginStart="3dp"
                        android:text="@string/titleChorbuch"
                        app:icon="@drawable/ic_oui4_store" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/contact" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/contactMeButton"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/number_button_height"
                    android:layout_marginStart="7dp"
                    android:text="@string/contactMe"
                    app:icon="@drawable/ic_oui4_mail" />

            </LinearLayout>

        </de.dlyt.yanndroid.oneui.widget.NestedScrollView>

    </FrameLayout>

</de.dlyt.yanndroid.oneui.layout.DrawerLayout>


