<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_support_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:title="@string/aboutMe">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/aboutMe" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="7dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/websiteButton"
                        style="@style/ButtonStyle.Filled"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/number_button_height"
                        android:layout_weight="1"
                        android:text="@string/website"
                        android:drawableStart="@drawable/ic_baseline_oui_website_24" />

                    <View android:layout_width="2dp" android:layout_height="match_parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/ticktocktrollButton"
                        style="@style/ButtonStyle.Filled"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/number_button_height"
                        android:layout_weight="1"
                        android:text="@string/tiktokTroll"
                        android:drawableStart="@drawable/ic_baseline_oui_open_24" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/supportMe" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/supportMeText" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/supportMeButton"
                    style="@style/ButtonStyle.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/number_button_height"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="7dp"
                    android:text="@string/writeEmail"
                    android:drawableStart="@drawable/ic_baseline_oui_email_outline_24" />


                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/rateApp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="7dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/writeReviewButton"
                        style="@style/ButtonStyle.Filled"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/number_button_height"
                        android:layout_weight="1"
                        android:text="@string/writeReview"
                        android:drawableStart="@drawable/ic_baseline_oui_pen_24" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/reviewCommentButton"
                        style="@style/ButtonStyle.Transparent"
                        android:layout_width="@dimen/number_button_height"
                        android:layout_height="@dimen/number_button_height"
                        android:drawableStart="@drawable/ic_baseline_oui_help_outline_24" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/share" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/shareAppButton"
                    style="@style/ButtonStyle.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/number_button_height"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="7dp"
                    android:text="@string/shareApp"
                    android:drawableStart="@drawable/ic_baseline_oui_share_outline_24" />

            </LinearLayout>

            <nl.dionsegijn.konfetti.xml.KonfettiView
                android:id="@+id/konfettiViewAboutMePage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.DrawerLayout>


