<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="gesangbuch"
        android:enabled="true"
        android:shortcutShortLabel="@string/titleGesangbuch"
        android:shortcutDisabledMessage="@string/shortcut_disabled_msg"
        android:icon="@drawable/ic_launcher_shortcut_gesangbuch">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.lemke.nakbuch"
            android:targetClass="de.lemke.nakbuch.ui.SplashActivityGesangbuch">
        </intent>
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>

    <shortcut
        android:shortcutId="chorbuch"
        android:enabled="true"
        android:shortcutShortLabel="@string/titleChorbuch"
        android:shortcutDisabledMessage="@string/shortcut_disabled_msg"
        android:icon="@drawable/ic_launcher_shortcut_chorbuch"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.lemke.nakbuch"
            android:targetClass="de.lemke.nakbuch.ui.SplashActivityChorbuch">
        </intent>
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>

    <shortcut
        android:shortcutId="jugendliederbuch"
        android:enabled="true"
        android:shortcutShortLabel="@string/titleJugendliederbuch"
        android:shortcutDisabledMessage="@string/shortcut_disabled_msg"
        android:icon="@drawable/ic_launcher_shortcut_jugendliederbuch">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.lemke.nakbuch"
            android:targetClass="de.lemke.nakbuch.ui.SplashActivityJugendliederbuch">
        </intent>
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>

    <shortcut
        android:shortcutId="jb_ergaenzungsheft"
        android:enabled="true"
        android:shortcutShortLabel="@string/titleJBErgaenzungsheft"
        android:shortcutDisabledMessage="@string/shortcut_disabled_msg"
        android:icon="@drawable/ic_launcher_shortcut_jb_ergaenzungsheft">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.lemke.nakbuch"
            android:targetClass="de.lemke.nakbuch.ui.SplashActivityJBErgaenzungsheft">
        </intent>
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
</shortcuts>