<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.AppInfoLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AboutActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_btn_open_in_store"
                style="@style/OneUI.AppInfoButton"
                android:text="@string/openInPlaystore"
                android:drawableStart="@drawable/ic_baseline_oui_galaxy_store_outline_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_btn_open_oneui_github"
                style="@style/OneUI.AppInfoButton"
                android:text="@string/oneUiLibaryGithub"
                android:drawableStart="@drawable/ic_baseline_oui_web_search_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_btn_help"
                style="@style/OneUI.AppInfoButton"
                android:text="@string/help"
                android:drawableStart="@drawable/ic_baseline_oui_help_outline_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_btn_about_me"
                style="@style/OneUI.AppInfoButton"
                android:text="@string/aboutMe"
                android:drawableStart="@drawable/ic_baseline_oui_contact_outline_24" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.AppInfoLayout>