<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.SwitchBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/switchbarlayout_easteregg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:navigationIcon="@drawable/ic_baseline_oui_back_24"
    app:title="Easter Eggs"
    app:subtitle="@string/app_name"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/oui_background_color"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:roundedCorners="top_left|top_right">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="afterDescendants"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/discoveredEasterEggsText"
                    style="?android:listSeparatorTextViewStyle"
                    android:text="@string/discoveredEasterEggs" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/easterEggList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/oui_background_color"
                    android:scrollbars="vertical"/>

                <!-- TODO com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/-->
                <View style="@style/DrawerDividerStyle" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/easterEggCommentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonStyle.Transparent"
                    android:gravity="center"
                    android:textSize="20.0sp"
                    android:maxLines="5"
                    />

            </LinearLayout>

            <nl.dionsegijn.konfetti.xml.KonfettiView
                android:id="@+id/konfettiViewEasterEgg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/easterEgg_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24.0dip"
        android:elevation="4.0dip"
        app:srcCompat="@drawable/ic_baseline_oui_help_outline_24"
        app:layout_location="root"
        android:contentDescription="@string/help" />

</dev.oneuiproject.oneui.layout.SwitchBarLayout>